# PythonProjectTemplate

./: .pre-commit-config.yaml  Dockerfile  Jenkinsfile  README.md  noxfile.py  pyproject.toml
src/python_project_template/: dummy_module.py
tests/: test_dummy.py
