[tool.poetry]
name = "python_project_template"
version = "0.1.0"
description = ""
authors = ["Matias Chomali <matias.chomali.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
testpaths = ["tests"]
